@@ -11,6 +11,8 @@
     //   ]
     // },
 
-    // the variable below does nothing
-    placeholder: 1
+    // uncomment and edit the example below to enable one or more
+    // JBrowse plugins
+
+    // plugins: [ 'MyPlugin', 'MyOtherPlugin' ]
 }
